overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,12 @@ body {
   color: var(--textShade200);
   font-family: gulzar;
   font-size: 17px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.main-container {
+  overflow-x: hidden;
 }
 .accentText {
   color: var(--accentColor);
